--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 reqwest = { version = "0.11.18", features = [ "json" ] }
 tokio = { version = "1.29.1", features = ["full"] }
 serde = { version = "1.0.178", features = ["derive"] }
+serde_json = "1.0.104"
