--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 license = "MIT"
 
 keywords = ["mempool", "bitcoin", "blockchain", "CLI"]
-categories = ["command-line-interface", "bitcoin", "terminal", "mempool"]
+categories = ["command-line-interface", "cryptography::cryptocurrencies", "finance"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
