--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mrtui"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 authors = ["PraxTube"]
@@ -22,3 +22,4 @@ reqwest = { version = "0.11.18", features = [ "json" ] }
 tokio = { version = "1.29.1", features = ["full"] }
 serde = { version = "1.0.178", features = ["derive"] }
 serde_json = "1.0.104"
+clap = { version = "4.3.4", features = ["derive"] }
