--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ tokio = { version = "1.29.1", features = ["full"] }
 serde = { version = "1.0.178", features = ["derive"] }
 serde_json = "1.0.104"
 clap = { version = "4.3.4", features = ["derive"] }
+textplots = "0.8.0"
